--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "scripts/build.sh",
-    "deploy": "gh-pages -d dist"
+    "deploy": "scripts/build.sh && gh-pages -d dist"
   },
   "devDependencies": {
     "pug": "^2.0.3"
